# ebook-toc

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/scripts/: normalize_version.py
.github/workflows/: ci.yml  publish-pypi.yml  release.yml  test.yml
ebooktoc/: __init__.py  cli.py  fingerprints.py  pdf_writer.py  progress.py  siliconflow_api.py  toc_parser.py  utils.py  vlm_api.py
tests/: test_apply_goodnotes.py  test_cli_mapping.py  test_entry_classification.py  test_mime_type.py  test_offset_inference.py  test_page_segments.py  test_pdf_writer_outline.py  test_siliconflow_cache.py  test_siliconflow_utils.py  test_text_search_utils.py  test_toc_parser.py  test_toc_parser_infer.py  test_unnumbered_entries.py  test_utils.py
